--- a/src/main/resources/info.html
+++ b/src/main/resources/info.html
@@ -9,5 +9,6 @@
         <h1>id : ${id}</h1>
         <h1>name : ${name}</h1>
         <h1>age : ${age}</h1>
+        <h2>count : ${count}</h2>
     </body>
 </html>
