--- a/src/main/resources/info.html
+++ b/src/main/resources/info.html
@@ -10,5 +10,6 @@
         <h1>name : ${name}</h1>
         <h1>age : ${age}</h1>
         <h2>count : ${count}</h2>
+        <br><a href="index.html">Home</a>
     </body>
 </html>
