--- a/src/main/resources/405.html
+++ b/src/main/resources/405.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Method Not Allowed</h1>
         <p>405 Method Not Allowed</p>
-        <br><a href="index.html">Home</a>
+        <hr><h3><a href="index.html">Home</a></h3>
     </body>
 </html>
