--- a/src/main/resources/404.html
+++ b/src/main/resources/404.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Not Found</h1>
         <p>The requested URL was not found on this server.</p>
-        <hr><h3><a href="index.html">Home</a></h3>
+        <hr><ul><li><h3><a href="index.html">Home</a></h3></li></ul>
     </body>
 </html>
