--- a/src/main/resources/405.html
+++ b/src/main/resources/405.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Method Not Allowed</h1>
         <p>405 Method Not Allowed</p>
-        <hr><h3><a href="index.html">Home</a></h3>
+        <hr><ul><li><h3><a href="index.html">Home</a></h3></li></ul>
     </body>
 </html>
