--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -9,9 +9,13 @@
         <h1>Hello Java!</h1>
         <h1></h1>
         <h2>count : ${count}</h2>
+        <h2>${userId}님의 회원가입이 완료 되었습니다!</h2>
         <hr>
-        <h3><a href="info.html?id=marco&age=40&name=마르코">Query String Test</a></h3>
-        <h3><a href="not_exist.html">404 Error Page Test</a></h3>
+        <ul>
+            <li><h3><a href="info.html?id=marco&age=40&name=마르코">Query String Test</a></h3></li>
+            <li><h3><a href="register.html">PORT Request Test</a></h3></li>
+            <li><h3><a href="not_exist.html">404 Error Page Test</a></h3></li>
+        </ul>
         <!--<form action="index.html" method="post">
             <h3><input type="submit" value="405 Error Page Test"></h3>
         </form>-->
