--- a/src/main/resources/info.html
+++ b/src/main/resources/info.html
@@ -10,6 +10,6 @@
         <h1>name : ${name}</h1>
         <h1>age : ${age}</h1>
         <h2>count : ${count}</h2>
-        <hr><h3><a href="index.html">Home</a></h3>
+        <hr><ul><li><h3><a href="index.html">Home</a></h3></li></ul>
     </body>
 </html>
